<resources>

    <!-- Constants -->

    <string name="admob_app_id" translatable="false">ca-app-pub-9261721980516763~5090102044</string>
    <string name="admob_ad_banner_id" translatable="false">ca-app-pub-9261721980516763/5062181889</string>
    <string name="admob_ad_interstitial_id" translatable="false">ca-app-pub-9261721980516763/8656115412</string>
    <!-- Test Banner : ca-app-pub-3940256099942544/6300978111 | Real Banner : ca-app-pub-9261721980516763/5062181889-->
    <!-- Test Interstitial : ca-app-pub-3940256099942544/1033173712 | Real Interstitial : ca-app-pub-9261721980516763/8656115412-->


    <!-- Back-End. -->

    <string name="app_name">Word Notebook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="minute">Minute</string>

    <string name="exam_category_size_error">Must select at least one list</string>
    <string name="exam_word_size_error">Must have at least 4 words</string>

    <string name="word_sort_alert_title">Select Sorting</string>
    <string name="word_sort_alert_button_positive">Sort</string>

    <string name="word_visibility_alert_title">Choose which words to display</string>

    <string name="word_page_error_category_not_found">"List not found."</string>

    <string name="category_selecting_title">item selected</string>

    <string name="word_context_menu_delete">Delete</string>
    <string name="word_context_menu_edit">Edit</string>

    <string name="word_delete_alert_title">Are you sure you want to delete it?</string>
    <string name="learned_words_delete_alert_title">Are you sure you want to delete learned words?</string>

    <string name="exception_no_content">You must enter text.</string>
    <string name="exception_content_limit_exceeded">Must be 30 characters or less.</string>

    <string name="category_delete_alert_title">Are you sure you want to delete it?</string>
    <string name="category_delete_alert_message">List :</string>

    <string name="word_confuse">Confuses</string>
    <string name="word_confuse_times">Times</string>

    <string name="exam_category_select_title">Select Category</string>

    <string name="exam_words_select_alert_title">Select Words</string>
    <string name="exam_words_select_alert_button_positive">Start</string>
    <string name="exam_words_non_select_error">You must select a word group</string>

    <string name="type_exam_word_all">All</string>
    <string name="type_exam_word_learned">Learned</string>
    <string name="type_exam_word_marked">Marked</string>
    <string name="type_exam_word_notlearned">Not Learned</string>

    <string name="type_word_sort_mostcorrectlyselected">Most correctly selected</string>
    <string name="type_word_sort_mostincorrectlyselected">Most incorrectly selected</string>
    <string name="type_word_sort_strangeaz">Foreign lang. A to Z</string>
    <string name="type_word_sort_strangeza">Foreign lang. Z to A</string>
    <string name="type_word_sort_explainaz">Native lang. A to Z</string>
    <string name="type_word_sort_Explainza">Native lang. Z to A</string>

    <string name="excelimport_first_alert_title">Select Excel File</string>
    <string name="excelimport_second_alert_title">Select Word Places</string>
    <string name="excelimport_message_loading">Words are loading. Please wait.</string>
    <string name="excelimport_message_loaded">Words added, total count :</string>
    <string name="excelimport_message_no_sd_card">Error : No SD card found.</string>
    <string name="excelimport_message_no_sheet_index">Error : Selected page not found.</string>
    <string name="excelimport_message_no_word">Added word : 0. Check out excel file or selected indexes.</string>

    <string name="excelexport_alert_title">Select Path To Export Excel</string>
    <string name="excelexport_message_no_content">Error : Not found list or words.</string>
    <string name="excelexport_message_no_path">Error : You must select path.</string>
    <string name="excelexport_share_title">Send To</string>
    <string name="excelexport_message_success">Export Success.</string>

    <string name="excel_message_version_error">This feature is for Android 5.0 and above</string>

    <string name="setting_word_notification_alert_title_loop_time">Select loop time</string>
    <string name="setting_word_notification_alert_title_font_size">Select font size</string>
    <string name="setting_word_notification_alert_title_set_time">Set time</string>

    <string name="feedback_program_chooser_title">Select mail application</string>

    <string name="words_notification_remove_alert_title">Are you sure you want to remove this list\'s words notification? </string>
    <string name="words_notification_select_alert_title">Which word group do you want to notification?</string>
    <string name="words_notification_select_alert_button_positive">Set</string>
    <string name="words_notification_error_message_word_group">You must select a word group.</string>
    <string name="words_notification_success_message1">Notification Set. Time interval :</string>
    <string name="words_notification_success_message2">For every :</string>
    <string name="words_notification_stop_button">Stop</string>
    <string name="words_notification_learned_button">Learned</string>
    <string name="words_notification_about">Sends notification selected words to memorize.</string>

    <string name="category_notification_select_alert_title">Which word group do you want to exam?</string>
    <string name="category_notification_remove_alert_title">Are you sure you want to remove this list\'s exam notification? </string>
    <string name="category_notification_select_alert_button_positive">Next</string>
    <string name="category_notification_select_time_title">Select alert time</string>
    <string name="category_notification_title">Exam Time</string>
    <string name="category_notification_content">Click to start : </string>
    <string name="category_notification_success_message">Exam notification set done.</string>
    <string name="category_notification_about">Set alarm to exam.</string>

    <string name="donation_alert_dialog_title">Select My Value :)</string>
    <string name="donation_alert_dialog_button_positive">Tip</string>

    <string name="donation_two_dollar_joke_1">I will remember you while drinking the coffee you ordered &#128538;</string>
    <string name="donation_five_dollar_joke_1">A man and a cat will be very happy with the pizza you give &#127829;&#128573;&#127829;&#128104;</string>
    <string name="donation_twenty_dollar_joke_1">It is time to find your girlfriend to spend this money &#129322;</string>
    <string name="donation_fifty_dollar_joke_1">I know you will not &#128530;</string>
    <string name="donation_fault_joke_1">It is the thought that counts &#129402;</string>
    <string name="donation_fault_joke_2">You wasted my time &#129393;</string>

    <string name="feedback_title_warning">Do not delete this.</string>

    <string name="developer">Developer :</string>

    <!-- Front-End. -->

    <string name="ui_category_toolbar_title">Lists</string>
    <string name="ui_word_toolbar_title">Words</string>

    <string name="ui_exam_pass_button" translatable="false">-></string>

    <string name="ui_mark">Mark</string>
    <string name="ui_learned">Learned</string>

    <string name="ui_add_word">Add Word</string>
    <string name="ui_switch_visibility">Switch Visibility</string>

    <string name="ui_true_count">True Count :</string>
    <string name="ui_false_count">False Count :</string>
    <string name="ui_average_response_time">Average Response Time :</string>

    <string name="ui_excel_import_info">NOTICE : Only \".xlsx\" acceptable. Word character limit 30 or clip.</string>
    <string name="ui_excel_import_path_back">Back File</string>
    <string name="ui_excel_import_cancel">Cancel</string>
    <string name="ui_excel_import_select_strange_column">Strange Column Index :</string>
    <string name="ui_excel_import_select_explain_column">Explain Column Index :</string>
    <string name="ui_excel_import_select_sheet_column">Page Index :</string>
    <string name="ui_excel_import_button_add_words">Add Words</string>
    <string name="ui_excel_import_check_do_not_add_exists_words">Do not add exists words in list.</string>

    <string name="ui_excel_export_info">Select directory to save excel file.</string>
    <string name="ui_excel_export_path_submit">Select Here</string>

    <string name="ui_category_add_hint">List Name</string>

    <string name="ui_word_add_strange_hint">Strange Word</string>
    <string name="ui_word_add_explain_hint">Meaning of the word</string>
    <string name="ui_word_add_button">Add Word</string>

    <string name="ui_word_edit_button_save">Save Word</string>

    <string name="ui_navbar_settings">Settings</string>
    <string name="ui_navbar_other">Other</string>
    <string name="ui_navbar_about">About</string>
    <string name="ui_navbar_rate">Please, Rate App</string>
    <string name="ui_navbar_feedback">Feedback</string>
    <string name="ui_navbar_donation">Donation :)</string>

    <string name="ui_category_menu_search">Search</string>
    <string name="ui_category_menu_exam">Exam</string>

    <string name="ui_word_menu_search">Search</string>
    <string name="ui_word_menu_words_visibility">Visibility</string>
    <string name="ui_word_menu_sort">Sort</string>
    <string name="ui_word_menu_delete_learned">Delete Learned</string>
    <string name="ui_word_menu_importexcel">Import Excel</string>
    <string name="ui_word_menu_exportexcel">Export Excel</string>

    <string name="ui_setting_toolbar_title">Settings</string>
    <string name="ui_setting_word_notification_title">Word Notification</string>
    <string name="ui_setting_word_notification_loop_time">Notification Loop Time</string>
    <string name="ui_setting_word_notification_loop_time_summary">How much minute time loop.</string>
    <string name="ui_setting_word_notification_start_time">Start Time</string>
    <string name="ui_setting_word_notification_start_time_summary">Set notification start time.</string>
    <string name="ui_setting_word_notification_end_time">End Time</string>
    <string name="ui_setting_word_notification_end_time_summary">Set notification end time.</string>
    <string name="ui_setting_notification_title">Notification</string>
    <string name="ui_setting_notification_sound">Sound</string>
    <string name="ui_setting_notification_sound_summary">On/Off uses phone default sound.</string>
    <string name="ui_setting_notification_vibrate">Vibrate</string>
    <string name="ui_setting_notification_vibrate_summary">On/Off for vibration.</string>
    <string name="ui_setting_notification_heads_up">Heads-Up</string>
    <string name="ui_setting_notification_heads_up_summary">Show at top of screen.</string>

    <string name="ui_setting_font_title">Font</string>
    <string name="ui_setting_font_size">Font Size</string>
    <string name="ui_setting_font_size_summary">Set font size.</string>
</resources>
