<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/ui_navbar_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/ui_navbar_rate"
                />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/ui_navbar_feedback"/>
            <item
                android:id="@+id/nav_donation"
                android:icon="@drawable/ic_donation"
                android:title="@string/ui_navbar_donation"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/ui_navbar_about" />
        </menu>
    </item>
</menu>