<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtExcelExportInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/font_low"
        android:text="@string/ui_excel_export_info"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExcelExportPathBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ui_excel_import_path_back"/>
    <ListView
        android:id="@+id/lvDeviceFilesPaths"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExcelExportCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/red"
            android:text="@string/ui_excel_import_cancel"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExcelExportPathSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/ui_excel_export_path_submit"/>
    </LinearLayout>
</LinearLayout>