<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/ui_excel_import_select_strange_column"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtExcelImpStrangeColumnIndex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:inputType="numberDecimal"
            android:text="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/ui_excel_import_select_explain_column"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtExcelImpExplainColumnIndex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:inputType="numberDecimal"
            android:text="2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/ui_excel_import_select_sheet_column"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtExcelImpSheetIndex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:inputType="numberDecimal"
            android:text="1"
            />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExcelImportWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ui_excel_import_button_add_words"/>

</LinearLayout>